# LLMs4OL-2026-Flagship-Task

./: .gitignore  LICENSE  README.md  config.split.yaml  config.yaml  evaluate.py  learner.py  main.py  models.py  pipeline.py  prepare_data.py  prompts.py  pyproject.toml  requirements.txt  run_step.py  s0_retriever.py  s1_term_extraction.py  s2_type_extraction.py  s3_term_typing.py  s4_taxonomy.py  s5_relations.py  split_data.py  train_s5_relation_classifier.py  train_term_classifier.py  unittest.py
data/: .gitignore
indexes/: .gitignore
models/: .gitignore
ontology_learning/: evaluate.py  learner.py  llm.py  pipeline.py  progress.py  prompts.py
ontology_learning/steps/: s0_retriever.py  s1_term_extraction.py  s2_type_extraction.py  s3_term_typing.py  s4_taxonomy.py  s5_relations.py
scripts/: analyse_training_data.py  finetune_s5.py  finetune_s5.slurm  prepare_data.py  prepare_s5_finetune.py  requirements-finetune.txt  run_pipeline.slurm  run_step.py  serve_ft_s5.slurm  serve_vllm.slurm  split_data.py  train_s5_relation_classifier.py  train_term_classifier.py
