[tool.poetry]
name = "ontology-learning"
version = "0.1.0"
description = "LLMs4OL 2026 Challenge — End-to-end ontology learning from raw text (Flagship Task)"
authors = ["Sondes SOUIHI <sondes.souihi@cea.fr>"]
readme = "README.md"
packages = [{include = "ontology_learning"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = ">=1.26"
sentence-transformers = ">=3.0"
transformers = ">=4.40"
matplotlib = ">=3.8"
networkx = ">=3.0"
# Official organizer evaluation (ontology_learning/official_eval)
rapidfuzz = ">=3.0"
scipy = ">=1.11"
scikit-learn = ">=1.3"
tqdm = ">=4.66"

# The pipeline is also integrated into the OntoLearner library (optional).

[tool.poetry.group.dev.dependencies]
ruff = ">=0.9"
mypy = ">=1.10"

[tool.poetry.scripts]
run-pipeline = "ontology_learning.pipeline:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Ruff — same config as main project
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["ontology_learning"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_return_any = false
